syntax = "proto3";

// @protomicro: app:"app" module:"order/item" plural="orders" description:"Order service"
package pkg.proto.order.v1;
option go_package = "service/v1/order;order";

import "google/api/annotations.proto";
import "validate/validate.proto";
import "pkg/proto/order/types.proto";
import "pkg/proto/common/common.proto";

service OrderService {
  // Get order
  rpc Get(GetOrderRequest) returns (GetOrderResponse) {
    option (google.api.http) = {
      get: "/v1/orders/{id}"
      response_body : "order"
    };
  }

  // List orders
  rpc List(ListOrdersRequest) returns (ListOrdersResponse) {
    option (google.api.http) = {
      get: "/v1/orders"
      response_body : "orders"
    };
  }

  // Create order
  rpc Create(CreatOrderRequest) returns (CreatOrderResponse) {
    option (google.api.http) = {
      post: "/v1/orders"
      body: "*"
    };
  };

  // Update order
  rpc Update(UpdateOrderRequest) returns (UpdateOrderResponse) {
		option (google.api.http) = {
			put: "/v1/orders/{id}"
			body: "order"
			additional_bindings: [
				{
					patch: "/v1/orders/{id}"
					body: "*"
				}
			]
		};
  }
  
  // Delete order
	rpc Delete(DeleteOrderRequest) returns (DeleteOrderResponse) {
		option (google.api.http) = {
			delete: "/v1/orders/{id}"
    };
  }
}

message GetOrderRequest {
  string id = 1;
}

message GetOrderResponse {
  Order order = 1;
}

message ListOrdersRequest {
  repeated string ids = 1;
  string application_id = 2;
  string account_id = 3;
  common.PaginationParam pagination=4 [(validate.rules).message.required = true];
}

message ListOrdersResponse {
  Orders orders = 1;
  
}

message CreatOrderRequest {
  Order order = 1;
}

message CreatOrderResponse {
  string id = 1;  
}

message UpdateOrderRequest {
  string id = 1;
  Order order = 2;
}

message UpdateOrderResponse {
  int64 updated = 1;
}


message DeleteOrderRequest {
  string id = 1;
  repeated string ids = 2;
}

message DeleteOrderResponse {
  int64 deleted = 1;
}
